# knic-jupyter

./: .gitignore  .prettierignore  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE.md  config.py  docker-compose.yaml  environment.yaml  install.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run-jupyter-lab.sh  tsconfig.json
.github/workflows/: build-docker-image.yml  build.yml  check-release.yml  update-integration-tests.yml
src/: index.ts
src/__tests__/: KNICS_Jupyter_frontend.spec.ts
ui-tests/: package.json
ui-tests/tests/: KNICS_Jupyter_frontend.spec.ts
