[build-system]
requires = ["hatchling>=1.3.1", "jupyterlab>=3.4.7,<4.0.0", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "knic-jupyter"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8.15"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
]

dynamic = ["version", "description", "authors", "urls", "keywords"]

dependencies = [
  "jupyter_client == 7.4.9",
  "jupyter_core == 5.1.5",
  "jupyter-events == 0.6.3",
  "jupyter_server == 2.1.0",
  "jupyter_server_terminals == 0.4.4",
  "jupyterlab == 3.5.3",
  "jupyterlab-pygments == 0.2.2",
  "jupyterlab_server == 2.19.0",
]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-tornasync"
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build]
artifacts = ["knic-jupyter/labextension"]

[tool.hatch.build.targets.wheel.shared-data]
"knic-jupyter/labextension" = "share/jupyter/labextensions/knic-jupyter"
"install.json" = "share/jupyter/labextensions/knic-jupyter/install.json"

[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "knic-jupyter/labextension/static/style.js",
    "knic-jupyter/labextension/package.json",
]
skip-if-exists = ["knic-jupyter/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "knic-jupyter/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"
